[package]
name = "dupes"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sha1 = "0.10.6"
threadpool = "1.8.1"

[dev-dependencies]
hex-literal = "1.0.0"
